# the-black-box-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  pub.sqlite
db/test/: blackbox.db  blackbox.db-shm  blackbox.db-wal
migrations/: 20211007125051_items_table.up.sql
migrations/2021-09-23-125838_bar/: down.sql  up.sql
src/: db.rs  db_test.rs  handler.rs  lib.rs  macros.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/handlers/: commands.rs  handler-bu.rs  message copy.rs  messages.rs
